almost done (description)
download it is broken (create dummy jar?)
add all combat test versions

--- a/build.gradle
+++ b/build.gradle
@@ -37,3 +37,5 @@ build.dependsOn shadowJar
 test {
     useJUnitPlatform()
 }
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
